# prism

./: .gitignore  CMakeLists.txt  Makefile  README.md  TESTING.md  annotation.c  annotation.h  ast_backend.c  ast_backend.h  c_tester.c  c_tester.h  check_engine.c  check_engine.h  detect_libs.c  detect_libs.h  hell_code.c  install_deps.sh  max_test.sh  prism.c  prism.h  sym_exec.c  sym_exec.h  test_all_flags.sh  test_div0.c  test_doublefree.c  test_intoverflow.c  test_leak.c  test_null_deref.c  test_uaf.c
.sisyphus/: boulder.json
.sisyphus/notepads/c-tester/: learnings.md
.sisyphus/plans/: c-tester-v2.md  c-tester.md  code-quality-improvement.md
bad_codes/: aliasing.c  dangling_pointer.c  double_free.c  free_stack.c  heap_overflow.c  int_underflow.c  modulo_zero.c  negative_index.c  null_arithmetic.c  realloc_null.c  return_local_addr.c  shift_overflow.c  sprintf_overflow.c  stack_overflow.c  strcpy_overflow.c  uninit_ptr.c  uninit_struct.c  vla_huge.c  vla_negative.c  write_readonly.c
bad_codes_v2/: 01_use_after_free_printf.c  02_snprintf_truncation.c  03_int_overflow_add.c  04_int_underflow_sub.c  05_div_by_zero.c  06_mod_by_zero.c  07_shift_out_of_range.c  08_shift_negative.c  09_null_deref_write.c  10_null_deref_read.c  11_double_free.c  12_stack_underflow.c  13_heap_underflow.c  14_uninit_local.c  15_memory_leak.c  16_heap_use_after_free.c  17_free_invalid_ptr.c  18_strcpy_overflow.c  19_memcpy_overflow.c  20_negative_malloc.c  21_realloc_null_check.c  22_oob_read.c  23_oob_write.c  24_double_leak.c  25_uaf_multi_write.c  26_uaf_cross_alloc.c  27_memset_overflow.c  28_ptr_arith_overflow.c  29_dangling_alias.c  30_off_by_one.c  31_nested_leak.c  32_double_free_delayed.c  33_uaf_then_double_free.c  34_strcat_uninit.c  35_huge_malloc.c  36_checked_double_free.c  37_uaf_mid_pointer.c  38_uaf_snprintf.c  39_alias_double_free.c  40_loop_oob.c  (+10 more)
hooks/: pre-commit
tests/: buffer_overflow.c  clean.c  cpp_vector_overflow.cpp  data_race.c  div_by_zero.c  infinite_loop.c  int_overflow.c  memory_leak.c  multi_helper.c  multi_main.c  no_main.c  null_deref.c  syntax_error.c  test_alloc_size_larger_than.c  test_edge_empty_output.c  test_edge_large_output.c  test_edge_long_path.c  test_edge_rapid_alloc.c  test_edge_timeout.c  test_free_nonheap_object.c  test_heap_buffer_overflow.c  test_heap_buffer_underflow.c  test_insufficient_space.c  test_invalid_shift.c  test_lock_order_inversion.c  test_null_deref_read.c  test_null_pointer_passed.c  test_out_of_bounds.c  test_signal_unsafe.c  test_stack_buffer_underflow.c  test_stack_overflow.c  test_valgrind_definite_leak.c  test_valgrind_invalid_read.c  test_valgrind_invalid_write.c  test_valgrind_possible_leak.c  test_valgrind_uninit_conditional.c  uninit_var.c  use_after_free.c  valgrind_uninit.c
